# zenowrapper

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CMakeLists.txt  CODEMETA.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  MANIFEST.in  README.md  debug_butanoic_acid.py  fair-software.md  index.html  pyproject.toml  requirements.yaml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
_includes/: ntd2d_variants.html
devtools/conda-envs/: ci_env.yaml  dev_env.yaml  docs_env.yaml  test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  implementation.md  implementation.rst  index.rst  parallelization.rst
docs/source/_templates/: README.md  layout.html
docs/source/_templates/autosummary/: attribute.rst  class.rst  method.rst  module.rst  property.rst
docs/source/autosummary/: zenowrapper.rst
en/latest/: .buildinfo  api.html  authors.html  genindex.html  implementation.html  index.html  objects.inv  parallelization.html  py-modindex.html  search.html  searchindex.js
en/latest/_downloads/: ZENOWrapper.epub
en/latest/_modules/: index.html
en/latest/_modules/zenowrapper/: main.html
en/latest/_sources/: api.rst.txt  index.rst.txt
en/latest/_sources/autosummary/: zenowrapper.main.Property.add_value.rst.txt  zenowrapper.main.Property.add_variance.rst.txt  zenowrapper.main.Property.compute_total_values.rst.txt  zenowrapper.main.Property.rst.txt  zenowrapper.main.ZenoWrapper.rst.txt  zenowrapper.main.rst.txt
en/latest/_static/: README.md  ntd2d.css  ntd2d_menu.html
en/latest/autosummary/: zenowrapper.html  zenowrapper.main.Property.add_value.html  zenowrapper.main.Property.add_variance.html  zenowrapper.main.Property.compute_total_values.html  zenowrapper.main.Property.html  zenowrapper.main.ZenoWrapper.get_supported_backends.html  zenowrapper.main.ZenoWrapper.html  zenowrapper.main.ZenoWrapper.parallelizable.html  zenowrapper.main.ZenoWrapper.run.html  zenowrapper.main.html
en/main/: api.html  authors.html  genindex.html  implementation.html  index.html  parallelization.html  py-modindex.html  search.html  searchindex.js
en/main/_downloads/: ZENOWrapper.epub
en/main/_modules/: index.html
en/main/_modules/zenowrapper/: main.html
en/main/_sources/: implementation.rst.txt
en/main/_sources/autosummary/: zenowrapper.main.ZenoWrapper.get_supported_backends.rst.txt  zenowrapper.main.ZenoWrapper.parallelizable.rst.txt  zenowrapper.main.ZenoWrapper.run.rst.txt  zenowrapper.rst.txt
en/main/_static/: ntd2d.css  ntd2d_menu.html
en/main/autosummary/: zenowrapper.html  zenowrapper.main.Property.add_value.html  zenowrapper.main.Property.add_variance.html  zenowrapper.main.Property.compute_total_values.html  zenowrapper.main.Property.html  zenowrapper.main.ZenoWrapper.get_supported_backends.html  zenowrapper.main.ZenoWrapper.html  zenowrapper.main.ZenoWrapper.parallelizable.html  zenowrapper.main.ZenoWrapper.run.html  zenowrapper.main.html
src/tests/: conftest.py  test_butanoic_acid.py  test_coverage_additions.py  test_parallelization.py  test_sphere_handling.py  test_zeno_computation.py  test_zenowrapper.py  utils.py
src/zenowrapper/: __init__.py  _version.py  main.py  py.typed  zenolib.cpp
src/zenowrapper/analysis/: main.py  zenolib.cpp
zenowrapper/: __init__.py
zenowrapper/analysis/: zenowrapper.py
zenowrapper/analysis/c_modules/: zenolib.cpp
zenowrapper/data/: files.py
zenowrapper/tests/: conftest.py  test_zenowrapper.py
zenowrapper/tests/analysis/: test_zenowrapper.py
