[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"


[project]
name = "zenowrapper"
description = "This package wraps the package ZENO in a compatible way with MDAnalysis."
authors = [
    {name = "Jennifer A. Clark", email = "jennifer.clark@nist.gov"},
]
maintainers = [
    {name = "Debra J. Audus", email = "debra.audus@nist.gov"},
    {name = "Derek Juba", email = "derek.juba@nist.gov"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "MDAnalysis>=2.1.0",
    "pytest-cov>=3.0",
    "pytest-xdist>=2.5",
]
keywords = [
    "molecular simulations",
    "hydrodynamics",
]
dynamic = [
    "version",
]


# [project.urls]
# source = "https://github.com/usnistgov/zenowrapper"
# documentation = "https://zenowrapper.readthedocs.io"


[tool.scikit-build]
wheel.license-files = ["LICENSE.md", "AUTHORS*"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "src/build/{wheel_tag}"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

[tool.setuptools_scm]
write_to = "src/zenowrapper/_version.py"


[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
    "mypy>=1.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]
dev = [
    "mypy>=1.0",
]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/tests",
]
addopts = [
    "--cov=src/zenowrapper",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]


[tool.black]
line-length = 80


[tool.coverage.run]
source = ["src/zenowrapper"]
omit = [
    # Omit the tests
    "*/tests/*",
    # Omit version file
    "*/_version.py",
]
branch = true


[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80


[tool.yapf]
COLUMN_LIMIT = 80
INDENT_WIDTH = 4
USE_TABS = false


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["zenowrapper"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "MDAnalysis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "zenowrapper.zenowrapper_ext.*"
ignore_missing_imports = true
